--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -26,6 +26,7 @@
 "Email","Email"
 "Email Address","Email Address"
 "Enable Charts","Enable Charts"
+"Ensure the URL ends with a trailing slash (/). For example: %s","Ensure the URL ends with a trailing slash (/). For example: %s"
 "File System","File System"
 "First Name","First Name"
 "Get ready to experience Open-Source eCommerce Evolved.","Get ready to experience Open-Source eCommerce Evolved."
@@ -47,6 +48,7 @@
 "One of PHP Extensions ""%s"" must be loaded.","One of PHP Extensions ""%s"" must be loaded."
 "Password","Password"
 "Password Confirmation","Password Confirmation"
+"Passwords do not match.","Passwords do not match."
 "Path ""%s"" must be writable.","Path ""%s"" must be writable."
 "Personal Information","Personal Information"
 "PHP extension ""%s"" must be loaded.","PHP extension ""%s"" must be loaded."
@@ -55,7 +57,6 @@
 "Please correct the user data and try again.","Please correct the user data and try again."
 "Please set all required settings before clicking Continue","Please set all required settings before clicking Continue"
 "Please wait while we set up your store...","Please wait while we set up your store..."
-"Provide a complete base URL for SSL connection. For example: %s","Provide a complete base URL for SSL connection. For example: %s"
 "Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database","Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database"
 "Required Fields","Required Fields"
 "Response from server isn't valid.","Response from server isn't valid."
@@ -69,6 +70,7 @@
 "The URL ""%s"" is invalid.","The URL ""%s"" is invalid."
 "The URL ""%s"" is not accessible.","The URL ""%s"" is not accessible."
 "Time Zone","Time Zone"
+"URL must end with a trailing slash (/)","URL must end with a trailing slash (/)"
 "User Name","User Name"
 "Username","Username"
 "User Password","User Password"
@@ -76,5 +78,5 @@
 "Web Access Options","Web Access Options"
 "Welcome to Maho's Installation Wizard","Welcome to Maho's Installation Wizard"
 "You're All Set","You're All Set"
-"You can specify server port, ex.: localhost:3307<br />If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock","You can specify server port, ex.: localhost:3307<br />If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock"
+"You can specify server port, ex.: localhost:3307<br>If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock","You can specify server port, ex.: localhost:3307<br>If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock"
 "You can specify server port, ex.: localhost:5432","You can specify server port, ex.: localhost:5432"
