--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -12,6 +12,7 @@
 "Amount Range","Amount Range"
 "Apply","Apply"
 "Balance","Balance"
+"Balance (Base Currency)","Balance (Base Currency)"
 "Balance After","Balance After"
 "Balance Before","Balance Before"
 "Can be overridden per product.","Can be overridden per product."
@@ -25,7 +26,6 @@
 "Created %d gift card product(s): %s","Created %d gift card product(s): %s"
 "Created At","Created At"
 "Create Gift Card Products","Create Gift Card Products"
-"Currency Code","Currency Code"
 "Date","Date"
 "Default: %s","Default: %s"
 "Default Expiry (days)","Default Expiry (days)"
@@ -69,6 +69,7 @@
 "Gift Certificates","Gift Certificates"
 "Inactive","Inactive"
 "Initial Balance","Initial Balance"
+"Initial Balance (Base Currency)","Initial Balance (Base Currency)"
 "Insufficient balance on gift card %s","Insufficient balance on gift card %s"
 "Is Redeemable","Is Redeemable"
 "Leave blank for immediate delivery","Leave blank for immediate delivery"
