--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -9,10 +9,12 @@
 "Allow Message","Allow Message"
 "All Websites","All Websites"
 "Amount","Amount"
+"Amount Due:","Amount Due:"
 "Amount Range","Amount Range"
+"An error occurred. Please try again.","An error occurred. Please try again."
 "Apply","Apply"
+"Applying...","Applying..."
 "Balance","Balance"
-"Balance (Base Currency)","Balance (Base Currency)"
 "Balance After","Balance After"
 "Balance Before","Balance Before"
 "Can be overridden per product.","Can be overridden per product."
@@ -53,11 +55,13 @@
 "Gift card ""%s"" is not valid.","Gift card ""%s"" is not valid."
 "Gift card ""%s"" is pending activation.","Gift card ""%s"" is pending activation."
 "Gift card ""%s"" was applied.","Gift card ""%s"" was applied."
+"Gift Card(s):","Gift Card(s):"
 "Gift card amount cannot be less than %s","Gift card amount cannot be less than %s"
 "Gift card amount cannot be more than %s","Gift card amount cannot be more than %s"
 "Gift Card Code","Gift Card Code"
 "Gift Card History","Gift Card History"
 "Gift Card Information","Gift Card Information"
+"Gift card not found.","Gift card not found."
 "Gift Card Notification Email","Gift Card Notification Email"
 "Gift Card Options","Gift Card Options"
 "Gift Cards","Gift Cards"
@@ -67,10 +71,12 @@
 "Gift Card Transaction History","Gift Card Transaction History"
 "Gift card was removed.","Gift card was removed."
 "Gift Certificates","Gift Certificates"
+"Have a gift card? Apply it here to reduce your payment amount.","Have a gift card? Apply it here to reduce your payment amount."
 "Inactive","Inactive"
 "Initial Balance","Initial Balance"
-"Initial Balance (Base Currency)","Initial Balance (Base Currency)"
 "Insufficient balance on gift card %s","Insufficient balance on gift card %s"
+"Invalid gift card code.","Invalid gift card code."
+"Invalid request.","Invalid request."
 "Is Redeemable","Is Redeemable"
 "Leave blank for immediate delivery","Leave blank for immediate delivery"
 "Leave empty to use system default. 0 = never expires.","Leave empty to use system default. 0 = never expires."
@@ -84,6 +90,7 @@
 "Optional","Optional"
 "Order #","Order #"
 "Order History","Order History"
+"Order Total:","Order Total:"
 "Personal Message","Personal Message"
 "Please enter a gift card code.","Please enter a gift card code."
 "Please select a valid gift card amount","Please select a valid gift card amount"
@@ -117,4 +124,5 @@
 "Website","Website"
 "Your Email","Your Email"
 "Your Name","Your Name"
+"Your order is fully covered by gift cards!","Your order is fully covered by gift cards!"
 "Your order is fully covered by gift cards. No additional payment is required.","Your order is fully covered by gift cards. No additional payment is required."
