--- a/app/locale/en_US/Mage_Directory.csv
+++ b/app/locale/en_US/Mage_Directory.csv
@@ -35,6 +35,7 @@
 "Currency","Currency"
 "CurrencyConverterAPI","CurrencyConverterAPI"
 "Currency Options","Currency Options"
+"Currency rate service error: %s","Currency rate service error: %s"
 "Currency rates can't be retrieved.","Currency rates can't be retrieved."
 "Currency Setup","Currency Setup"
 "Currency Update Warnings","Currency Update Warnings"
@@ -138,10 +139,11 @@
 "Two character country code (e.g. US, GB, DE)","Two character country code (e.g. US, GB, DE)"
 "Two character ISO code (usually same as Country ID)","Two character ISO code (usually same as Country ID)"
 "Unable to initialize the import model.","Unable to initialize the import model."
+"Unable to calculate rate for %s to %s.","Unable to calculate rate for %s to %s."
+"Unable to retrieve rate for USD to %s.","Unable to retrieve rate for USD to %s."
 "Undefined rate from ""%s-%s"".","Undefined rate from ""%s-%s""."
 "Update existing regions and localized names","Update existing regions and localized names"
 "WARNING:","WARNING:"
-"We can't retrieve a rate from %s for %s.","We can't retrieve a rate from %s for %s."
 "Your Currency","Your Currency"
 "Your Currency:","Your Currency:"
 "Your current currency is: %s","Your current currency is: %s"
