--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -15,11 +15,16 @@
 "Apply","Apply"
 "Applying...","Applying..."
 "Balance","Balance"
+"Balance: %s","Balance: %s"
+"Balance: %s (%s)","Balance: %s (%s)"
 "Balance After","Balance After"
 "Balance Before","Balance Before"
 "Can be overridden per product.","Can be overridden per product."
 "Cannot remove gift card.","Cannot remove gift card."
 "Card Type","Card Type"
+"Check","Check"
+"Check Balance","Check Balance"
+"Checking...","Checking..."
 "Code","Code"
 "Code Length","Code Length"
 "Code Prefix (e.g., GC)","Code Prefix (e.g., GC)"
@@ -33,6 +38,7 @@
 "Default Expiry (days)","Default Expiry (days)"
 "Delete","Delete"
 "Delete Gift Card","Delete Gift Card"
+"Disabled","Disabled"
 "Edit","Edit"
 "Edit Gift Card '%s'","Edit Gift Card '%s'"
 "Email Sender","Email Sender"
@@ -47,6 +53,7 @@
 "Fixed + Range","Fixed + Range"
 "Fixed Amount(s)","Fixed Amount(s)"
 "Fixed Amounts","Fixed Amounts"
+"Fully Used","Fully Used"
 "Gift Card","Gift Card"
 "Gift card ""%s"" has been fully used.","Gift card ""%s"" has been fully used."
 "Gift card ""%s"" has expired.","Gift card ""%s"" has expired."
@@ -74,6 +81,7 @@
 "Inactive","Inactive"
 "Initial Balance","Initial Balance"
 "Insufficient balance on gift card %s","Insufficient balance on gift card %s"
+"Invalid form key. Please refresh the page and try again.","Invalid form key. Please refresh the page and try again."
 "Invalid gift card code.","Invalid gift card code."
 "Invalid request.","Invalid request."
 "Leave blank for immediate delivery","Leave blank for immediate delivery"
@@ -98,6 +106,7 @@
 "Recipient Email","Recipient Email"
 "Recipient Name","Recipient Name"
 "Remove","Remove"
+"Removing...","Removing..."
 "Save And Continue Edit","Save And Continue Edit"
 "Save Gift Card","Save Gift Card"
 "Schedule Delivery","Schedule Delivery"
@@ -113,8 +122,11 @@
 "This is a required field.","This is a required field."
 "This order will be fully paid by the gift card(s)","This order will be fully paid by the gift card(s)"
 "This order will be fully paid using the following gift card(s):","This order will be fully paid using the following gift card(s):"
+"Too many attempts. Please wait a moment and try again.","Too many attempts. Please wait a moment and try again."
 "Total Gift Card Amount","Total Gift Card Amount"
+"Unable to check balance.","Unable to check balance."
 "Unable to find a gift card to delete.","Unable to find a gift card to delete."
+"Unknown","Unknown"
 "Updated At","Updated At"
 "Used","Used"
 "Use Default (%s)","Use Default (%s)"
