Add giftcard to backend orders too

--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -12,13 +12,17 @@
 "Amount Due:","Amount Due:"
 "Amount Range","Amount Range"
 "An error occurred. Please try again.","An error occurred. Please try again."
+"Applied: %s","Applied: %s"
+"Applied Gift Cards:","Applied Gift Cards:"
 "Apply","Apply"
+"Apply Gift Card","Apply Gift Card"
 "Applying...","Applying..."
 "Balance","Balance"
 "Balance: %s","Balance: %s"
 "Balance After","Balance After"
 "Balance Before","Balance Before"
 "Can be overridden per product.","Can be overridden per product."
+"Cannot apply gift card.","Cannot apply gift card."
 "Cannot remove gift card.","Cannot remove gift card."
 "Card Type","Card Type"
 "Check","Check"
@@ -58,6 +62,7 @@
 "Gift card ""%s"" is already applied.","Gift card ""%s"" is already applied."
 "Gift card ""%s"" is not active.","Gift card ""%s"" is not active."
 "Gift card ""%s"" is not valid.","Gift card ""%s"" is not valid."
+"Gift card ""%s"" is not valid for this website.","Gift card ""%s"" is not valid for this website."
 "Gift card ""%s"" was applied.","Gift card ""%s"" was applied."
 "Gift Card(s):","Gift Card(s):"
 "Gift card amount cannot be less than %s","Gift card amount cannot be less than %s"
@@ -120,6 +125,7 @@
 "This order will be fully paid by the gift card(s)","This order will be fully paid by the gift card(s)"
 "This order will be fully paid using the following gift card(s):","This order will be fully paid using the following gift card(s):"
 "Too many attempts. Please wait a moment and try again.","Too many attempts. Please wait a moment and try again."
+"Total: %s","Total: %s"
 "Total Gift Card Amount","Total Gift Card Amount"
 "Unable to check balance.","Unable to check balance."
 "Unable to find a gift card to delete.","Unable to find a gift card to delete."
