--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -12,7 +12,6 @@
 "Amount Due:","Amount Due:"
 "Amount Range","Amount Range"
 "An error occurred. Please try again.","An error occurred. Please try again."
-"Applied: %s","Applied: %s"
 "Applied Gift Cards:","Applied Gift Cards:"
 "Apply","Apply"
 "Apply Gift Card","Apply Gift Card"
@@ -36,6 +35,7 @@
 "Created %d gift card product(s): %s","Created %d gift card product(s): %s"
 "Created At","Created At"
 "Create Gift Card Products","Create Gift Card Products"
+"Custom Amount","Custom Amount"
 "Date","Date"
 "Default: %s","Default: %s"
 "Default Expiry (days)","Default Expiry (days)"
@@ -100,6 +100,7 @@
 "Order #","Order #"
 "Order History","Order History"
 "Order Total:","Order Total:"
+"Other Amount","Other Amount"
 "Personal Message","Personal Message"
 "Please enter a gift card code.","Please enter a gift card code."
 "Please select a valid gift card amount","Please select a valid gift card amount"
