--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -844,6 +844,7 @@
 "Updated At","Updated At"
 "Update Items and Qty's","Update Items and Qty's"
 "Update Qty's","Update Qty's"
+"Update Totals","Update Totals"
 "Use Aggregated Data (beta)","Use Aggregated Data (beta)"
 "Use Order Status As Default","Use Order Status As Default"
 "Validate Each Address Separately in Multi-address Checkout","Validate Each Address Separately in Multi-address Checkout"
