--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -12,6 +12,7 @@
 "Amount Due:","Amount Due:"
 "Amount Range","Amount Range"
 "An error occurred. Please try again.","An error occurred. Please try again."
+"Applied gift cards:","Applied gift cards:"
 "Applied Gift Cards:","Applied Gift Cards:"
 "Apply","Apply"
 "Apply Gift Card","Apply Gift Card"
@@ -83,7 +84,6 @@
 "Have a gift card? Apply it here to reduce your payment amount.","Have a gift card? Apply it here to reduce your payment amount."
 "Inactive","Inactive"
 "Initial Balance","Initial Balance"
-"Insufficient balance on gift card %s","Insufficient balance on gift card %s"
 "Invalid form key. Please refresh the page and try again.","Invalid form key. Please refresh the page and try again."
 "Invalid gift card code.","Invalid gift card code."
 "Invalid request.","Invalid request."
@@ -109,6 +109,7 @@
 "QR Code & Barcode","QR Code & Barcode"
 "Recipient Email","Recipient Email"
 "Recipient Name","Recipient Name"
+"Refund to Gift Card","Refund to Gift Card"
 "Remove","Remove"
 "Save And Continue Edit","Save And Continue Edit"
 "Save Gift Card","Save Gift Card"
