Added sample data installation step to web installer
- New wizard step between Configuration and Administrator
- AJAX-based progress tracking with real-time phase updates
- Reuses SampleDataImporter and SqlConverter from CLI
- Supports MySQL, PostgreSQL, and SQLite with proper FK handling
- Progress displayed via phases: Download, Extract, Media, Database, Finalize
- Skip option for users who don't want sample data

Closes #460

--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -78,3 +78,34 @@
 "You're All Set","You're All Set"
 "You can specify server port, ex.: localhost:3307<br>If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock","You can specify server port, ex.: localhost:3307<br>If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock"
 "You can specify server port, ex.: localhost:5432","You can specify server port, ex.: localhost:5432"
+"Copying media files...","Copying media files..."
+"Database","Database"
+"Downloading","Downloading"
+"Downloading sample data...","Downloading sample data..."
+"Extracting","Extracting"
+"Extracting files...","Extracting files..."
+"Failed to download sample data from %s","Failed to download sample data from %s"
+"Failed to copy media files: %s","Failed to copy media files: %s"
+"Failed to extract sample data: %s","Failed to extract sample data: %s"
+"Failed to save sample data to temporary file","Failed to save sample data to temporary file"
+"Failed to start installation. Please try again.","Failed to start installation. Please try again."
+"Finalizing","Finalizing"
+"Finalizing installation...","Finalizing installation..."
+"Importing configuration...","Importing configuration..."
+"Importing database...","Importing database..."
+"Importing database... (%s/%s)","Importing database... (%s/%s)"
+"Install Sample Data","Install Sample Data"
+"Install Sample Products & Content","Install Sample Products & Content"
+"Installation Failed","Installation Failed"
+"Installing Sample Data","Installing Sample Data"
+"Media Files","Media Files"
+"Please wait while we set up your demo content...","Please wait while we set up your demo content..."
+"Retry","Retry"
+"Sample Data","Sample Data"
+"Sample data includes demo products, categories, customers, and content to help you explore Maho features and understand how everything works.","Sample data includes demo products, categories, customers, and content to help you explore Maho features and understand how everything works."
+"Sample data installed successfully!","Sample data installed successfully!"
+"Skip","Skip"
+"Skip Sample Data","Skip Sample Data"
+"Skip this step","Skip this step"
+"Starting...","Starting..."
+"This process may take a few minutes depending on your server speed.","This process may take a few minutes depending on your server speed."
