--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -4,6 +4,8 @@
 "Admin","Admin"
 "Admin Path","Admin Path"
 "Base URL","Base URL"
+"Cache","Cache"
+"Cache flush failed: %s","Cache flush failed: %s"
 "Categories","Categories"
 "Clothing, accessories & more","Clothing, accessories & more"
 "CMS Pages","CMS Pages"
@@ -40,9 +42,8 @@
 "Failed to save sample data to temporary file","Failed to save sample data to temporary file"
 "Failed to start installation. Please try again.","Failed to start installation. Please try again."
 "File System","File System"
-"Finalize","Finalize"
-"Finalizing installation...","Finalizing installation..."
 "First Name","First Name"
+"Flushing caches...","Flushing caches..."
 "Get ready to experience Open-Source eCommerce Evolved.","Get ready to experience Open-Source eCommerce Evolved."
 "Go to Backend","Go to Backend"
 "Go to Frontend","Go to Frontend"
@@ -83,6 +84,9 @@
 "Please wait while we set up your store...","Please wait while we set up your store..."
 "Product images & banners","Product images & banners"
 "Products","Products"
+"Reindex","Reindex"
+"Reindexing data...","Reindexing data..."
+"Reindexing failed: %s","Reindexing failed: %s"
 "Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database","Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database"
 "Required Fields","Required Fields"
 "Response from server isn't valid.","Response from server isn't valid."
