--- a/app/locale/en_US/Mage_Usa.csv
+++ b/app/locale/en_US/Mage_Usa.csv
@@ -29,8 +29,8 @@
 "Cannot identify measure unit for %s","Cannot identify measure unit for %s"
 "Cannot identify weight unit for %s","Cannot identify weight unit for %s"
 "Centimeters","Centimeters"
-"Client ID","Client ID"
-"Client Secret","Client Secret"
+"Client ID (Consumer Key)","Client ID (Consumer Key)"
+"Client Secret (Consumer Secret)","Client Secret (Consumer Secret)"
 "cm","cm"
 "Commercial","Commercial"
 "Configuration","Configuration"
@@ -248,7 +248,7 @@
 "Priority Overnight","Priority Overnight"
 "Production","Production"
 "Rectangular","Rectangular"
-"Register your application at <a href=""https://developers.usps.com"" target=""_blank"">developers.usps.com</a> to obtain OAuth credentials. Use the same credentials for both test and production environments.","Register your application at <a href=""https://developers.usps.com"" target=""_blank"">developers.usps.com</a> to obtain OAuth credentials. Use the same credentials for both test and production environments."
+"Register your application at <a href=""https://developers.usps.com"" target=""_blank"">developers.usps.com</a> to obtain OAuth credentials. Copy the Consumer Key as your Client ID and the Consumer Secret as your Client Secret. Use the same credentials for both test and production environments.","Register your application at <a href=""https://developers.usps.com"" target=""_blank"">developers.usps.com</a> to obtain OAuth credentials. Copy the Consumer Key as your Client ID and the Consumer Secret as your Client Secret. Use the same credentials for both test and production environments."
 "Regular","Regular"
 "Regular Pickup","Regular Pickup"
 "Request Courier","Request Courier"
