Reviewed price templates

--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -57,6 +57,8 @@
 "Fixed + Range","Fixed + Range"
 "Fixed Amount(s)","Fixed Amount(s)"
 "Fixed Amounts","Fixed Amounts"
+"From","From"
+"From:","From:"
 "Gift Card","Gift Card"
 "Gift card ""%s"" has been fully used.","Gift card ""%s"" has been fully used."
 "Gift card ""%s"" has expired.","Gift card ""%s"" has expired."
@@ -105,6 +107,7 @@
 "Please enter a gift card code.","Please enter a gift card code."
 "Please select a valid gift card amount","Please select a valid gift card amount"
 "Please select gift card(s).","Please select gift card(s)."
+"Price varies","Price varies"
 "Print PDF","Print PDF"
 "QR Code & Barcode","QR Code & Barcode"
 "Recipient Email","Recipient Email"
@@ -126,6 +129,7 @@
 "This is a required field.","This is a required field."
 "This order will be fully paid by the gift card(s)","This order will be fully paid by the gift card(s)"
 "This order will be fully paid using the following gift card(s):","This order will be fully paid using the following gift card(s):"
+"To","To"
 "Too many attempts. Please wait a moment and try again.","Too many attempts. Please wait a moment and try again."
 "Total: %s","Total: %s"
 "Total Gift Card Amount","Total Gift Card Amount"
