--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -131,6 +131,7 @@
 "Enable X-Content-Type-Options","Enable X-Content-Type-Options"
 "Enable X-XSS-Protection","Enable X-XSS-Protection"
 "Enabling ability to run Maho in a frame is not recommended for security reasons.","Enabling ability to run Maho in a frame is not recommended for security reasons."
+"Error generating PDF: %s","Error generating PDF: %s"
 "Error in file: ""%s"" - %s","Error in file: ""%s"" - %s"
 "European Union Countries","European Union Countries"
 "Favicon Icon","Favicon Icon"
