--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -212,6 +212,7 @@
 "Denied the payment online.","Denied the payment online."
 "Deny Payment","Deny Payment"
 "Description Message","Description Message"
+"Dimensions: %s","Dimensions: %s"
 "Discount","Discount"
 "Discount (%s)","Discount (%s)"
 "Discount Amount","Discount Amount"
@@ -849,6 +850,7 @@
 "Use Order Status As Default","Use Order Status As Default"
 "Validate Each Address Separately in Multi-address Checkout","Validate Each Address Separately in Multi-address Checkout"
 "Value","Value"
+"Value: %s","Value: %s"
 "View","View"
 "View All","View All"
 "View Another Order","View Another Order"
@@ -859,6 +861,7 @@
 "Void invoice","Void invoice"
 "Website","Website"
 "Weight","Weight"
+"Weight: %s","Weight: %s"
 "Whether buyer can define the date when billing for the profile begins.","Whether buyer can define the date when billing for the profile begins."
 "Width","Width"
 "Wishlist","Wishlist"
