--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -144,3 +144,5 @@
 "Your Email","Your Email"
 "Your Name","Your Name"
 "Your order is fully covered by gift cards!","Your order is fully covered by gift cards!"
+"Not redeemable for cash","Not redeemable for cash"
+"Lost cards not replaced","Lost cards not replaced"
