--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -114,6 +114,7 @@
 "QR Code & Barcode","QR Code & Barcode"
 "Recipient Email","Recipient Email"
 "Recipient Name","Recipient Name"
+"Refund Expiration Extension (days)","Refund Expiration Extension (days)"
 "Refund to Gift Card","Refund to Gift Card"
 "Remove","Remove"
 "Save And Continue Edit","Save And Continue Edit"
@@ -143,6 +144,7 @@
 "Use Default (%s)","Use Default (%s)"
 "View","View"
 "Website","Website"
+"When refunding to an expired gift card, extend expiration by this many days. 0 = no extension (card stays expired but balance is restored).","When refunding to an expired gift card, extend expiration by this many days. 0 = no extension (card stays expired but balance is restored)."
 "Your Email","Your Email"
 "Your Name","Your Name"
 "Your order is fully covered by gift cards!","Your order is fully covered by gift cards!"
