--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -409,11 +409,11 @@
 "No shipping information available","No shipping information available"
 "Not Capture","Not Capture"
 "Not enough valid data to save the parent transaction ID.","Not enough valid data to save the parent transaction ID."
-"Notification Not Applicable","Notification Not Applicable"
-"Notified","Notified"
+"Customer Notification Not Applicable","Customer Notification Not Applicable"
+"Customer Notified","Customer Notified"
+"Customer Not Notified","Customer Not Notified"
 "Notify Customer by Email","Notify Customer by Email"
 "Not Initialized","Not Initialized"
-"Not Notified","Not Notified"
 "Number","Number"
 "Number of Invoiced Orders","Number of Invoiced Orders"
 "Number of Orders","Number of Orders"
