Replaced some legacy GIF icon with SVG and removed unused assets (#493)

--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -199,6 +199,9 @@
 "Customer My Account Order Shipment View","Customer My Account Order Shipment View"
 "Customer My Account Order View","Customer My Account Order View"
 "Customer Name","Customer Name"
+"Customer Notification Not Applicable","Customer Notification Not Applicable"
+"Customer Notified","Customer Notified"
+"Customer Not Notified","Customer Not Notified"
 "Custom Price","Custom Price"
 "Customs Value","Customs Value"
 "Custom Value","Custom Value"
@@ -409,11 +412,8 @@
 "No shipping information available","No shipping information available"
 "Not Capture","Not Capture"
 "Not enough valid data to save the parent transaction ID.","Not enough valid data to save the parent transaction ID."
-"Notification Not Applicable","Notification Not Applicable"
-"Notified","Notified"
 "Notify Customer by Email","Notify Customer by Email"
 "Not Initialized","Not Initialized"
-"Not Notified","Not Notified"
 "Number","Number"
 "Number of Invoiced Orders","Number of Invoiced Orders"
 "Number of Orders","Number of Orders"
