Improve gift card checkout UX and remove unused payment method
Checkout improvements:
- Hide non-zero-total payment methods (checkmo, etc.) when gift cards fully cover order
- Remove redundant "Gift Card" payment method section
- Use standard "free" payment method for zero-total orders

Admin form improvements:
- Simplify new gift card creation: single "Amount" field instead of redundant Balance/Initial Balance
- Edit mode shows "Initial Balance" (read-only) and "Current Balance" (editable) with clear helper text
- Automatically set initial_balance = balance on creation

Gift card status:
- Fix status update to "used" when balance reaches $0.00

Code cleanup:
- Remove unused gift card payment method (giftcard was never available in checkout)
- Remove obsolete payment form/info blocks and templates
- Remove payment helper override and checkout methods block override
- Remove auto-select payment method observer
- Remove payment method configuration from config.xml
- Update PHPStorm metadata

Gift cards now work purely as a discount mechanism that reduces order total.
When fully covered, the standard "free" payment method is used.

--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -33,6 +33,7 @@
 "Code Prefix (e.g., GC)","Code Prefix (e.g., GC)"
 "Comma-separated values (e.g., 25,50,100)","Comma-separated values (e.g., 25,50,100)"
 "Created","Created"
+"Current Balance","Current Balance"
 "Created %d gift card product(s): %s","Created %d gift card product(s): %s"
 "Created At","Created At"
 "Create Gift Card Products","Create Gift Card Products"
@@ -45,6 +46,7 @@
 "Disabled","Disabled"
 "Edit","Edit"
 "Edit Gift Card '%s'","Edit Gift Card '%s'"
+"Edit this to manually adjust the balance. Use ""Admin Comment"" to explain the adjustment.","Edit this to manually adjust the balance. Use ""Admin Comment"" to explain the adjustment."
 "Email Sender","Email Sender"
 "Email Settings","Email Settings"
 "Email Template","Email Template"
@@ -130,8 +132,6 @@
 "The gift card has been saved.","The gift card has been saved."
 "This gift card no longer exists.","This gift card no longer exists."
 "This is a required field.","This is a required field."
-"This order will be fully paid by the gift card(s)","This order will be fully paid by the gift card(s)"
-"This order will be fully paid using the following gift card(s):","This order will be fully paid using the following gift card(s):"
 "To","To"
 "Too many attempts. Please wait a moment and try again.","Too many attempts. Please wait a moment and try again."
 "Total: %s","Total: %s"
