--- a/app/locale/en_US/Mage_Usa.csv
+++ b/app/locale/en_US/Mage_Usa.csv
@@ -29,7 +29,9 @@
 "Cannot identify measure unit for %s","Cannot identify measure unit for %s"
 "Cannot identify weight unit for %s","Cannot identify weight unit for %s"
 "Centimeters","Centimeters"
+"Client ID","Client ID"
 "Client ID (Consumer Key)","Client ID (Consumer Key)"
+"Client Secret","Client Secret"
 "Client Secret (Consumer Secret)","Client Secret (Consumer Secret)"
 "cm","cm"
 "Commercial","Commercial"
