Improve path validation in Dataflow import parsers
Replace weak str_replace('../', '') filter with proper realpath()
validation to ensure imported files cannot escape the import directory.

The new validation:
- Resolves both base directory and requested file paths
- Verifies the file path stays within the allowed import directory
- Throws an exception for invalid paths

--- a/app/locale/en_US/Mage_Dataflow.csv
+++ b/app/locale/en_US/Mage_Dataflow.csv
@@ -14,6 +14,7 @@
 "Found %d rows.","Found %d rows."
 "hour","hour"
 "hours","hours"
+"Invalid file path.","Invalid file path."
 "Invalid node.","Invalid node."
 "Less than a minute","Less than a minute"
 "Loaded successfully: ""%s"".","Loaded successfully: ""%s""."
