--- a/app/locale/en_US/Mage_Dataflow.csv
+++ b/app/locale/en_US/Mage_Dataflow.csv
@@ -23,6 +23,7 @@
 "Method ""%s"" was not defined in adapter %s.","Method ""%s"" was not defined in adapter %s."
 "minute","minute"
 "minutes","minutes"
+"Path ""%s"" is not allowed. Files must be in var/export or var/import.","Path ""%s"" is not allowed. Files must be in var/export or var/import."
 "Please declare ""adapter"" and ""method"" nodes first.","Please declare ""adapter"" and ""method"" nodes first."
 "Processed records: %s","Processed records: %s"
 "Profile with the same name already exists.","Profile with the same name already exists."
