--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -183,7 +183,6 @@
 "Invalid or empty SVG file.","Invalid or empty SVG file."
 "Invalid query","Invalid query"
 "Invalid stream.","Invalid stream."
-"Invalid template path: contains parent directory traversal","Invalid template path: contains parent directory traversal"
 "Invalid template path used in layout update.","Invalid template path used in layout update."
 "Invalid transactional email code: %s","Invalid transactional email code: %s"
 "Invalid URL","Invalid URL"
@@ -240,6 +239,7 @@
 "Pagination","Pagination"
 "Pagination Frame","Pagination Frame"
 "Pagination Frame Skip","Pagination Frame Skip"
+"Path ""%s"" contains an invalid stream wrapper.","Path ""%s"" contains an invalid stream wrapper."
 "Path ""%s"" contains invalid parent directory references.","Path ""%s"" contains invalid parent directory references."
 "Path ""%s"" is not available and cannot be used.","Path ""%s"" is not available and cannot be used."
 "Path ""%s"" is protected and cannot be used.","Path ""%s"" is protected and cannot be used."
